--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
                                 <i class="bi bi-person-circle icon-2"></i>
                             </a>                        
                         </div>
+                    <div>emma</div>
+                        
                     </div>
                 </div>
             </header>
